--- a/Requirements.txt
+++ b/Requirements.txt
@@ -3,3 +3,13 @@ Memberships
 * User should see link for Pro Plan on home page
 * Basic plan link should point to regular Devise sign up form
 * Pro plan link should point to a custom sign up form
+
+Stripe Integration
+* Modify user database table to store stripe customer token (customer ID)
+* Javascript should prevent pro form from submitting, when user fills it out,
+and should send card info to Stripe. Stripe will return with a card token.
+* Javascript should send user fields and card token to our rails app. Rails app
+should validate the user fields. Rails app will note whether plan 1 or plan 2.
+* Once validated, Rails should send user info (email, plan id) and card token
+to Stripe server and Stripe will create a subscription and send back to customer
+token. Rails should save customer token and user information to database.
